cmake: Set default install dir to /usr/local

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -129,6 +129,11 @@ elseif(WIN32)
   set(QT_USE_QTMAIN TRUE)
   set(CPACK_GENERATOR WIX)
 else()
+  if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
+    set(CMAKE_INSTALL_PREFIX /usr/local CACHE PATH
+        "Default installation directory" FORCE)
+  endif()
+  message(STATUS "PREFIX: " ${CMAKE_INSTALL_PREFIX})
   set(CPACK_SOURCE_GENERATOR "TGZ")
   set(CPACK_SOURCE_IGNORE_FILES \\.git/ build/ ".*~$")
   set(CPACK_VERBATIM_VARIABLES YES)
