--- a/misc/CMakeLists.txt
+++ b/misc/CMakeLists.txt
@@ -4,11 +4,12 @@ set(D "${PROJECT_BINARY_DIR}/misc")
 file(MAKE_DIRECTORY ${D})
 
 configure_file(${S}/Info.plist.in ${D}/Info.plist)
+configure_file(${S}/dynamic.wxs.in ${D}/dynamic.wxs)
 
 set(CPACK_RESOURCE_FILE_LICENSE "${S}/copyright.rtf")
 set(CPACK_BUNDLE_PLIST "${D}/Info.plist")
 set_property(TARGET ${PROJECT_NAME}
-	     PROPERTY MACOSX_BUNDLE_INFO_PLIST "${D}/Info.plist")
+             PROPERTY MACOSX_BUNDLE_INFO_PLIST "${D}/Info.plist")
 
 ##### XCA Templates
 set(TEMPLATES CA.xca TLS_server.xca TLS_client.xca)
@@ -21,13 +22,12 @@ list(APPEND APP_RESOURCES "${XCA_TEMPLATES}")
 ##### Text Files ids.txt eku.txt dn.txt
 
 macro(Text_header file)
-  add_custom_command(OUTPUT "${D}/${file}.txt"
-        COMMAND ${CMAKE_COMMAND} -DFILE=${file}
-		-DSRC="${S}" -DDST="${D}"
-                -P "${PROJECT_SOURCE_DIR}/cmake/text_header_file.cmake"
+    add_custom_command(OUTPUT "${D}/${file}.txt"
+        COMMAND ${CMAKE_COMMAND} -DFILE=${file} -DSRC="${S}" -DDST="${D}"
+        -P "${PROJECT_SOURCE_DIR}/cmake/text_header_file.cmake"
         DEPENDS "${S}/${file}.text" "${S}/preamble.txt"
-  )
-  list(APPEND TEXT_FILES "${D}/${file}.txt")
+    )
+    list(APPEND TEXT_FILES "${D}/${file}.txt")
 endmacro()
 
 Text_header(dn)
@@ -64,6 +64,6 @@ if (UNIX AND NOT APPLE)
         RENAME xca
   )
   install(FILES misc/xca.xml
-	DESTINATION ${CMAKE_INSTALL_DATADIR}/mime/packages
+        DESTINATION ${CMAKE_INSTALL_DATADIR}/mime/packages
   )
 endif()
