Improve dependencies in cmake files and add sensible defaults
Add custom-targets, dependencies and "Generated" properties
to fix race conditions.

Add default paths for my setup on Windows
and MacOSX

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,8 @@ if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE Release)
 endif()
 
-set(CMAKE_OSX_DEPLOYMENT_TARGET "10.13")
+set(CMAKE_OSX_DEPLOYMENT_TARGET 10.13)
+
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
 set(CMAKE_CXX_STANDARD 11)
@@ -40,17 +41,44 @@ add_executable(${CMAKE_PROJECT_NAME} img/imgres.qrc)
 add_executable(xcadoc xcadoc.cpp)
 target_include_directories(xcadoc PRIVATE "${PROJECT_SOURCE_DIR}/lib")
 
+if (APPLE)
+  execute_process(COMMAND brew --prefix OUTPUT_STRIP_TRAILING_WHITESPACE
+                  OUTPUT_VARIABLE BREW_PREFIX ERROR_QUIET)
+  # Preset the default brew paths....
+  if (NOT Qt5_DIR)
+    set(Qt5_DIR ${BREW_PREFIX}/opt/qt@5/lib/cmake/Qt5)
+  endif()
+  if (NOT OPENSSL_ROOT_DIR)
+    set(OPENSSL_ROOT_DIR ${BREW_PREFIX}/opt/openssl@1.1)
+  endif()
+elseif(WIN32)
+  if (NOT Qt5_DIR)
+    set(Qt5_DIR "C:/Qt/5.15.2/mingw81_64/lib/cmake/Qt5")
+  endif()
+  if (NOT OPENSSL_ROOT_DIR)
+    set(OPENSSL_ROOT_DIR $ENV{PROGRAMFILES}/OpenSSL-Win64)
+  endif()
+  set(PSQL_BINDIR $ENV{PROGRAMFILES}/PostgreSQL/14/bin
+                  CACHE PATH "PostgreSQL installation directory for the MSI installer")
+  set(MYSQL_BINDIR $ENV{PROGRAMFILES}/qsqlmysql.dll_Qt_SQL_driver_5.15.2_MinGW_8.1.0_64-bit/${CMAKE_BUILD_TYPE}
+                  CACHE PATH "MySQL installation directory for the MSI installer")
+  if (NOT EXISTS ${PSQL_BINDIR})
+    set(PSQL_BINDIR "")
+  endif()
+  if (NOT EXISTS ${MYSQL_BINDIR})
+    set(MYSQL_BINDIR "")
+  endif()
+endif()
+
 find_package(OpenSSL REQUIRED)
 find_package(Qt5 REQUIRED COMPONENTS Core Widgets Sql Help LinguistTools)
+get_target_property(qmake_executable Qt5::qmake IMPORTED_LOCATION)
+get_filename_component(_qt_bin_dir "${qmake_executable}" DIRECTORY)
+find_program(MACDEPLOYQT_EXECUTABLE macdeployqt HINTS "${_qt_bin_dir}")
+find_program(WINDEPLOYQT_EXECUTABLE windeployqt HINTS "${_qt_bin_dir}")
 
-get_filename_component(OPENSSL_ROOT_DIR ${OPENSSL_INCLUDE_DIR} DIRECTORY)
-set(PSQL_BINDIR "C:/Program Files/PostgreSQL/14/bin")
-set(MYSQL_BINDIR "C:/Program Files/qsqlmysql.dll_Qt_SQL_driver_5.15.2_MinGW_8.1.0_64-bit/${CMAKE_BUILD_TYPE}")
-if (NOT EXISTS ${PSQL_BINDIR})
-  set(PSQL_BINDIR "")
-endif()
-if (NOT EXISTS ${MYSQL_BINDIR})
-  set(MYSQL_BINDIR "")
+if (NOT OPENSSL_ROOT_DIR)
+  get_filename_component(OPENSSL_ROOT_DIR ${OPENSSL_INCLUDE_DIR} DIRECTORY)
 endif()
 
 target_link_libraries(${CMAKE_PROJECT_NAME}
@@ -119,11 +147,6 @@ set(CPACK_PACKAGE_VERSION "${PROJECT_VERSION}")
 ###############################################
 ##### Host specific settings
 
-get_target_property(qmake_executable Qt5::qmake IMPORTED_LOCATION)
-get_filename_component(_qt_bin_dir "${qmake_executable}" DIRECTORY)
-find_program(MACDEPLOYQT_EXECUTABLE macdeployqt HINTS "${_qt_bin_dir}")
-find_program(WINDEPLOYQT_EXECUTABLE windeployqt HINTS "${_qt_bin_dir}")
-
 if(APPLE)
   if (DEFINED ENV{APPLE_DEVELOPER})
     set(APPLE_CERT_3PARTY_INST "3rd Party Mac Developer Installer: $ENV{APPLE_DEVELOPER}")
@@ -137,6 +160,10 @@ if(APPLE)
 	MACOSX_BUNDLE TRUE
 	RESOURCE "${APP_RESOURCES}"
   )
+  get_target_property(qmake_executable Qt5::qmake IMPORTED_LOCATION)
+  get_filename_component(_qt_bin_dir "${qmake_executable}" DIRECTORY)
+  find_program(MACDEPLOYQT_EXECUTABLE macdeployqt HINTS "${_qt_bin_dir}")
+
   add_custom_command(TARGET ${CMAKE_PROJECT_NAME}
     COMMAND "${MACDEPLOYQT_EXECUTABLE}"
         "${CMAKE_BINARY_DIR}/${CMAKE_PROJECT_NAME}.app"
