--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -4,7 +4,8 @@ set(D "${PROJECT_BINARY_DIR}/doc")
 file(MAKE_DIRECTORY "${D}")
 
 find_program(SPHINX sphinx-build)
-find_program(QTCOLLGEN NAMES qhelpgenerator qcollectiongenerator)
+find_program(QTCOLLGEN NAMES qhelpgenerator qcollectiongenerator
+                       HINTS "${_qt_bin_dir}")
 
 set(FILENAMES
 	index commandline requests object-ids common-actions database options
@@ -39,55 +40,65 @@ WixFile(${D}/documentation.wxs ${WIX_DOC_CONTENT})
 if(SPHINX)
   configure_file(${S}/conf.py.in ${D}/rst/conf.py)
   add_custom_command(
-	OUTPUT ${HTML_DEST}
+	OUTPUT ${D}/html.stamp
 	COMMAND ${SPHINX} -b html ${D}/rst ${D}/html
-	DEPENDS "${D}/rst/conf.py" sphinx-src
+	COMMAND cmake -E touch ${D}/html.stamp
+	DEPENDS ${D}/rst/conf.py sphinx-src
 	COMMENT "Create HTML documentation"
   )
+  add_custom_target(sphinx-html DEPENDS ${D}/html.stamp)
   add_custom_command(
-	OUTPUT "${D}/qthelp/xca.qhcp" "${D}/qthelp/xca.qhp" ${QTHELP_DEST}
+	OUTPUT ${D}/qthelp.stamp
 	COMMAND ${SPHINX} -b qthelp ${D}/rst ${D}/qthelp
-	DEPENDS "${D}/rst/conf.py" sphinx-src
+	COMMAND cmake -E touch ${D}/qthelp.stamp
+	DEPENDS ${D}/rst/conf.py sphinx-src
 	COMMENT "Create context sensitive help"
   )
+  set_source_files_properties(${HTML_DEST}
+	${D}/qthelp/xca.qhcp ${D}/qthelp/xca.qhp ${QTHELP_DEST}
+	PROPERTIES GENERATED TRUE
+  )
+  add_custom_target(sphinx-qthelp DEPENDS ${D}/qthelp.stamp)
   add_custom_command(
 	OUTPUT ${D}/rst/database_schema.sql
 	COMMAND ${CMAKE_COMMAND} -E make_directory ${D}/rst/_static
 	COMMAND ${CMAKE_COMMAND}
-		-D "SRC=${PROJECT_SOURCE_DIR}/lib/database_schema.cpp"
-		-D "DST=${D}/rst/database_schema.sql"
-		-P "${PROJECT_SOURCE_DIR}/cmake/database_schema.cmake"
-	DEPENDS "${PROJECT_SOURCE_DIR}/lib/database_schema.cpp"
+		-D SRC=${PROJECT_SOURCE_DIR}/lib/database_schema.cpp
+		-D DST=${D}/rst/database_schema.sql
+		-P ${PROJECT_SOURCE_DIR}/cmake/database_schema.cmake
+	DEPENDS ${PROJECT_SOURCE_DIR}/lib/database_schema.cpp
 	COMMENT "Generating database schema SQL documentation"
   )
   add_custom_command(
-	OUTPUT ${D}/rst/COPYRIGHT ${D}/rst/changelog
-		${D}/rst/_static/bigcert.png ${RST_DEST}
-	COMMAND ${CMAKE_COMMAND} -E make_directory "${D}/rst/_static"
+	OUTPUT ${D}/rst.stamp
+	COMMAND ${CMAKE_COMMAND} -E make_directory ${D}/rst/_static
 	COMMAND ${CMAKE_COMMAND} -E copy_if_different
-				"${PROJECT_SOURCE_DIR}/img/bigcert.png"
-				"${D}/rst/_static"
+				${PROJECT_SOURCE_DIR}/img/bigcert.png
+				${D}/rst/_static
 	COMMAND ${CMAKE_COMMAND} -E copy_if_different
-				"${PROJECT_SOURCE_DIR}/COPYRIGHT"
-				"${PROJECT_SOURCE_DIR}/changelog"
+				${PROJECT_SOURCE_DIR}/COPYRIGHT
+				${PROJECT_SOURCE_DIR}/changelog
 				${RST_SOURCE} ${D}/rst
-	DEPENDS "${PROJECT_SOURCE_DIR}/COPYRIGHT"
-		"${PROJECT_SOURCE_DIR}/changelog"
+	DEPENDS ${PROJECT_SOURCE_DIR}/COPYRIGHT
+		${PROJECT_SOURCE_DIR}/changelog
 		${RST_SOURCE}
 	COMMENT "Prepare Sphinx source directory"
   )
   add_custom_command(
-	OUTPUT "${D}/rst/arguments.rst"
-	COMMAND xcadoc rst "${D}/rst/arguments.rst"
+	OUTPUT ${D}/rst/arguments.rst
+	COMMAND xcadoc rst ${D}/rst/arguments.rst
 	COMMENT "Generate 'rst' commandline documentation"
   )
-  add_custom_target(sphinx-html ALL DEPENDS ${HTML_DEST})
+  add_dependencies(${CMAKE_PROJECT_NAME} sphinx-html sphinx-qthelp)
+  set_source_files_properties(${HTML_DEST} ${QTHELP_DEST}
+	${D}/qthelp/xca.qhcp ${D}/qthelp/xca.qhp
+	PROPERTIES GENERATED TRUE
+  )
+  target_sources(${CMAKE_PROJECT_NAME} PRIVATE ${HTML_DEST})
   add_custom_target(sphinx-src
-	DEPENDS ${D}/rst/COPYRIGHT ${D}/rst/changelog
-		${D}/rst/_static/bigcert.png
+	DEPENDS ${D}/rst.stamp
 		${D}/rst/database_schema.sql
 		${D}/rst/arguments.rst
-		${RST_DEST}
   )
 
   if (UNIX AND NOT APPLE)
@@ -99,14 +110,18 @@ if(SPHINX)
   if(QTCOLLGEN)
     set(QTHELP_IDX ${D}/qthelp/xca.qhc ${D}/qthelp/xca.qch)
     add_custom_command(
-	OUTPUT ${QTHELP_IDX}
+	OUTPUT ${D}/qtcollgen.stamp
 	COMMAND ${QTCOLLGEN} ${D}/qthelp/xca.qhcp
-	DEPENDS ${D}/qthelp/xca.qhcp
+	COMMAND cmake -E touch ${D}/qtcollgen.stamp
+	DEPENDS ${D}/qthelp.stamp
 	COMMENT "Create context sensitive help index"
     )
-    add_custom_target(sphinx-qthelp ALL DEPENDS ${QTHELP_IDX})
-
+    add_custom_target(sphinx-qtcollgen DEPENDS ${D}/qtcollgen.stamp)
+    set_source_files_properties(${QTHELP_IDX}
+	PROPERTIES GENERATED TRUE
+    )
     target_sources(${CMAKE_PROJECT_NAME} PRIVATE ${QTHELP_DEST} ${QTHELP_IDX})
+    add_dependencies(${CMAKE_PROJECT_NAME} sphinx-qtcollgen)
     list(APPEND APP_RESOURCES ${QTHELP_DEST} ${QTHELP_IDX})
 
     if (UNIX AND NOT APPLE)
@@ -115,7 +130,11 @@ if(SPHINX)
         )
     endif()
 
+  else(QTCOLLGEN)
+    message(WARNING "Neither 'qhelpgenerator' nor 'qcollectiongenerator' found. In-app documentation disabed. ${Qt5_DIR}/../../../bin")
   endif(QTCOLLGEN)
+else(SPHINX)
+  message(WARNING "sphinx-build binary not found. Documentation generation disabled")
 endif(SPHINX)
 
 if (NOT WIN32)
