--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -41,7 +41,7 @@ if(SPHINX)
   configure_file(${S}/conf.py.in ${D}/rst/conf.py)
   add_custom_command(
 	OUTPUT ${D}/html.stamp
-	COMMAND ${SPHINX} -b html ${D}/rst ${D}/html
+	COMMAND ${SPHINX} -q -b html ${D}/rst ${D}/html
 	COMMAND cmake -E touch ${D}/html.stamp
 	DEPENDS ${D}/rst/conf.py sphinx-src
 	COMMENT "Create HTML documentation"
@@ -49,7 +49,7 @@ if(SPHINX)
   add_custom_target(sphinx-html DEPENDS ${D}/html.stamp)
   add_custom_command(
 	OUTPUT ${D}/qthelp.stamp
-	COMMAND ${SPHINX} -b qthelp ${D}/rst ${D}/qthelp
+	COMMAND ${SPHINX} -q -b qthelp ${D}/rst ${D}/qthelp
 	COMMAND cmake -E touch ${D}/qthelp.stamp
 	DEPENDS ${D}/rst/conf.py sphinx-src
 	COMMENT "Create context sensitive help"
@@ -89,7 +89,7 @@ if(SPHINX)
 	COMMAND xcadoc rst ${D}/rst/arguments.rst
 	COMMENT "Generate 'rst' commandline documentation"
   )
-  add_dependencies(${CMAKE_PROJECT_NAME} sphinx-html sphinx-qthelp)
+  add_dependencies(${CMAKE_PROJECT_NAME} sphinx-html)
   set_source_files_properties(${HTML_DEST} ${QTHELP_DEST}
 	${D}/qthelp/xca.qhcp ${D}/qthelp/xca.qhp
 	PROPERTIES GENERATED TRUE
