--- a/misc/entitlement.plist
+++ b/misc/entitlement.plist
@@ -7,5 +7,7 @@
     <true/>
     <key>com.apple.security.files.user-selected.read-write</key>
     <true/>
+    <key>com.apple.security.cs.disable-library-validation</key>
+    <true/>
 </dict>
 </plist>
