--- a/misc/dynamic.wxs.in
+++ b/misc/dynamic.wxs.in
@@ -6,6 +6,10 @@
             <Component Id="Clibcrypto11x64" Guid="44133d17-96b5-4aee-8a24-9c722482add5">
                 <File Id="libcrypto11x64.dll" Source="@OPENSSL_ROOT_DIR@/bin/libcrypto-1_1-x64.dll" KeyPath="yes"/>
             </Component>
+            <Component Id="Cvcruntime140" Guid="f0b03b2a-14f7-4631-bfe3-d4c6c9b57e1d">
+                <File Id="vcruntime140.dll" Source="@SYSTEM32@/vcruntime140.dll" KeyPath="yes"/>
+            </Component>
+	    <!-- aqt install-tool windows desktop tools_vcredist qt.tools.vcredist_msvc2019_x64 -->
         </DirectoryRef>
         <FeatureGroup Id="DatabaseGroup">
             <Feature Id="Databases" Title="Database Drivers"
