--- a/doc/conf.py.in
+++ b/doc/conf.py.in
@@ -20,6 +20,7 @@
 project = '@PROJECT_NAME@'
 copyright = '2021, Christian Hohnstädt'
 author = 'Christian Hohnstädt'
+master_doc = 'index'
 
 # The full version, including alpha/beta/rc tags
 release = '@PROJECT_VERSION@'
