--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -40,23 +40,21 @@ WixFile(${D}/documentation.wxs ${WIX_DOC_CONTENT})
 if(SPHINX)
   configure_file(${S}/conf.py.in ${D}/rst/conf.py)
   add_custom_command(
-	OUTPUT ${D}/html.stamp
-	BYPRODUCTS ${HTML_DEST}
+	OUTPUT ${HTML_DEST}
 	COMMAND ${SPHINX} -q -b html ${D}/rst ${D}/html
-	COMMAND cmake -E touch ${D}/html.stamp
 	DEPENDS ${D}/rst/conf.py sphinx-src
 	COMMENT "Create HTML documentation"
   )
-  add_custom_target(sphinx-html DEPENDS ${D}/html.stamp)
+  add_custom_target(sphinx-html DEPENDS ${HTML_DEST})
   add_custom_command(
-	OUTPUT ${D}/qthelp.stamp
-	BYPRODUCTS ${D}/qthelp/xca.qhcp ${D}/qthelp/xca.qhp ${QTHELP_DEST}
+	OUTPUT ${D}/qthelp/xca.qhcp ${D}/qthelp/xca.qhp ${QTHELP_DEST}
 	COMMAND ${SPHINX} -q -b qthelp ${D}/rst ${D}/qthelp
-	COMMAND cmake -E touch ${D}/qthelp.stamp
 	DEPENDS ${D}/rst/conf.py sphinx-src
 	COMMENT "Create context sensitive help"
   )
-  add_custom_target(sphinx-qthelp DEPENDS ${D}/qthelp.stamp)
+  add_custom_target(sphinx-qthelp
+	DEPENDS ${D}/qthelp/xca.qhcp ${D}/qthelp/xca.qhp ${QTHELP_DEST}
+  )
   add_custom_command(
 	OUTPUT ${D}/rst/database_schema.sql
 	COMMAND ${CMAKE_COMMAND} -E make_directory ${D}/rst/_static
@@ -110,14 +108,12 @@ if(SPHINX)
   if(QTCOLLGEN)
     set(QTHELP_IDX ${D}/qthelp/xca.qhc ${D}/qthelp/xca.qch)
     add_custom_command(
-	OUTPUT ${D}/qtcollgen.stamp
-	BYPRODUCTS ${QTHELP_IDX}
+	OUTPUT ${QTHELP_IDX}
 	COMMAND ${QTCOLLGEN} ${D}/qthelp/xca.qhcp
-	COMMAND cmake -E touch ${D}/qtcollgen.stamp
-	DEPENDS ${D}/qthelp.stamp
+	DEPENDS sphinx-qthelp
 	COMMENT "Create context sensitive help index"
     )
-    add_custom_target(sphinx-qtcollgen DEPENDS ${D}/qtcollgen.stamp)
+    add_custom_target(sphinx-qtcollgen DEPENDS ${QTHELP_IDX})
     target_sources(${CMAKE_PROJECT_NAME} PRIVATE ${QTHELP_DEST} ${QTHELP_IDX})
     add_dependencies(${CMAKE_PROJECT_NAME} sphinx-qtcollgen)
     list(APPEND APP_RESOURCES ${QTHELP_DEST} ${QTHELP_IDX})
